--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main
+      - main  # Cambia a "master" si tu rama principal es "master"
   pull_request:
     branches:
       - main
@@ -28,18 +28,14 @@ jobs:
     - name: Build with Ant
       run: ant -f build.xml clean jar
 
-    # Paso 4: Ejecutar pruebas con Ant
-    #- name: Run tests with Ant
-    # run: ant -f build.xml test
-
-    ## Paso 5: Escaneo de vulnerabilidades con OWASP Dependency-Check
+    # Paso 4: Escaneo de vulnerabilidades con OWASP Dependency-Check
     - name: Run OWASP Dependency-Check
       run: |
         curl -LO https://github.com/jeremylong/DependencyCheck/releases/download/v6.5.0/dependency-check-6.5.0-release.zip
         unzip dependency-check-6.5.0-release.zip -d dependency-check
-        ./dependency-check/bin/dependency-check.bat --project CI-CD-Scan --out reports --scan .
+        cmd /c dependency-check\\bin\\dependency-check.bat --project CI-CD-Scan --out reports --scan .
 
-    # Paso 6: Desplegar en VM Windows usando PowerShell Remoting
+    # Paso 5: Desplegar en VM Windows usando PowerShell Remoting
     - name: Deploy to VM with PowerShell Remoting
       shell: pwsh
       env:
@@ -56,16 +52,16 @@ jobs:
         # Crear la carpeta de destino si no existe
         Invoke-Command -Session $session -ScriptBlock {
           if (!(Test-Path -Path 'C:\Users\ML\Desktop\Pruebas')) {
-           New-Item -ItemType Directory -Path 'C:\Users\ML\Desktop\Pruebas'
+            New-Item -ItemType Directory -Path 'C:\Users\ML\Desktop\Pruebas'
           }
         }
 
         # Copiar el archivo JAR a la VM Windows
-        Copy-Item -Path dist\Login.jar -Destination "C:\Users\ML\Desktop\Pruebas\Seguridad_aplicaciones\Login\src\Login.jar" -ToSession $session
+        Copy-Item -Path dist\Login.jar -Destination "C:\Users\ML\Desktop\Pruebas\Login.jar" -ToSession $session
 
         # Ejecutar la aplicación en la VM Windows
         Invoke-Command -Session $session -ScriptBlock {
-          Start-Process -NoNewWindow -FilePath 'java' -ArgumentList '-jar', 'C:\Users\ML\Desktop\Pruebas\Seguridad_aplicaciones\Login\src\Login.jar'
+          Start-Process -NoNewWindow -FilePath 'java' -ArgumentList '-jar', 'C:\Users\ML\Desktop\Pruebas\Login.jar'
         }
 
         # Cerrar la sesión remota
